added functionality for the server to store images for the posts

--- a/blog-frontend/tsconfig.app.json
+++ b/blog-frontend/tsconfig.app.json
@@ -23,5 +23,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "extends": "./tsconfig.json",
+  "exclude": ["node_modules", "dist"]
 }
