--- a/blog-frontend/tsconfig.json
+++ b/blog-frontend/tsconfig.json
@@ -9,23 +9,15 @@
 		}
 	],
 	"compilerOptions": {
-		"target": "esnext",
-		"module": "esnext",
-		"jsx": "react",
-		"strict": true,
-		"moduleResolution": "node",
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"baseUrl": "./",
+		"baseUrl": ".",
 		"paths": {
-			"@/*": ["/src/*"],
-			"@api/*": ["/src/api/*"],
-			"@components/*": ["/src/components/*"],
-			"@context/*": ["/src/context/*"],
-			"@layout/*": ["/src/components/layout/*"],
-			"@routes/*": ["/src/routes/*"],
-			"@utils/*": ["/src/utils/*"],
+			"@/*": ["./src/*"],
+			"@api/*": ["./src/api/*"],
+			"@components/*": ["./src/components/*"],
+			"@context/*": ["./src/context/*"],
+			"@layout/*": ["./src/components/layout/*"],
+			"@routes/*": ["./src/routes/*"],
+			"@utils/*": ["./src/utils/*"],
 		},
 	},
 }
